<resources>
    <string name="app_name">WingWatch</string>
    <string name="google_maps_key">AIzaSyA_kRbH4zhg5H6TQ6SNi6A2y_RtEZwvJOc</string>
    <string name="app_logo">App Logo</string>
    <string name="settings_header">Settings &amp; Profile</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="activity">Activity</string>
    <string name="saved_bird_observations">Saved Bird Observations</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="user_profile_icon">User Profile Icon</string>
    <string name="arrow_right_icon">Arrow Right Icon</string>

    <!-- activity_user_achievements.xml strings added -->
    <string name="p_achievement">%d%%</string>
    <string name="complete_achievement">Completed</string>

</resources>